jpeacock  r6302):

	Now works with 'require version' and not just 'use version' (with tests).
	Pure Perl UNIVERSAL::VERSION now operates correctly when used as a fallback
	inherited class method, e.g. class->VERSION or $obj->VERSION.

jpeacock  r6295):

	Fix reported failures with UNIVERSAL::VERSION as fallback method in vpp.pm.
	Augment new() to try and spot non-magic v-strings for v5.6.2 - v5.8.1.

john_peacock  r6272):

	Prep beta release to CPAN.

	Improve POD on using modules that use version.pm.
	New tests.
	Require pure Perl module for 5.005_03 (for now).

john_peacock  r6271):

	Tweak ppport.h #define's to support 5.0005_04

john_peacock  r6270):

	Rewrite to remove dependency on Exporter.
	Fix RT#19017 - problems related to very small version numbers.

john_peacock  r6269):

	Not sure if this works on 5.005_03 after all

john_peacock  r6266):

	Complete compatibility with Perl 5.005_0x as well as 5.6.2.
	Remove the compatibility warnings.pm (since it was a bad idea).
	Release to CPAN.

john_peacock  r6264):

	Fix the pure Perl release for 5.005_0x (thanks to Nick Ing-Simmons).
	Ready for release to CPAN.

john_peacock  r6263):

	Restore compatibility with Perl 5.6.x (though not with 5.005_x yet).

john_peacock  r6261):

	* lib/version.pod
	    Minor POD fixup (revealed by pod2html).

	* t/coretests.pm
	  t/01base.t
	  t/02derived.t
	    Suppress status messages except when --verbose is used.

jpeacock  r6259):

	Release 0.57 to CPAN.  Only bumps $VERSION and slightly improve Build.PL.

jpeacock  r6257):

	Next beta release to CPAN.

	* Build.PL
	    Subclass Module::Build and override have_c_compiler() with one that
	    fails without die'ing.

	* README
	  lib/version.pm
	  vperl/vpp.pm
	  vutil/vxs.pm
	    $VERSION++.

jpeacock  r6255):

	Beta release to CPAN.

	* README
	  lib/version.pm
	    Bump $VERSION for new release.

	* vperl/vpp.pm
	    Fully implemented UNIVERSAL::VERSION in the pure Perl module.