@@ -1,4 +1,4 @@
-version 0.59_04
+version 0.59_05
 ==================================
 
 Provides the same version objects as included in Perl v5.9.x (and hopefully in
@@ -9,7 +9,7 @@ with the interim 5.9.0, 5.9.1, and 5.9.2 releases (since it duplicates code
 in the core).  If you are testing bleadperl, you will need to check out the
 latest release of 5.9.x to get the changes included in 0.58.
 
-Major changes in 0.59_04 - 2006-05-16
+Major changes in 0.59_05 - 2006-05-18
 =====================================
 Very small version numbers (like 0.000001, e.g. v0.0.1) would run afoul of
 Perl's normal switch to exponential notation.  Both the XS and Perl modules
